# loyalty-program

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  billing_workflow_curls.md  docker-compose.prod.yml  docker-compose.yml  mvnw  pom.xml  render.yaml  test_billing.py
.github/workflows/: deploy.yml  docker-publish.yml  mirror.yml
docs/: TODO.MD  kernel_core documentation.md  prompt -- reward.md  prompt-- Guide complet — Moteur de Règles et Points (Loyalty Core).md  prompt-- wallet.md  promt--Préparation à l'intégration du Kernel Core.md
loyalty-program-frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
loyalty-program-frontend/.github/workflows/: notify-yowyob.yml
loyalty-program-frontend/messages/: en.json  fr.json
loyalty-program-frontend/public/: offline.html  sw.js
loyalty-program-frontend/src/: proxy.ts
loyalty-program-frontend/src/app/: globals.css  manifest.ts
scripts/: .env.example  kernel_billing_smoketest.py  kernel_full_smoketest.py  local_smoketest.py  run_all_smoketests.py  smoketest_bonification.py  smoketest_subscription.py  smoketest_tenant.py  smoketest_wallet.py  smoketest_webhook.py
scripts/postgres-init/: 01-create-keycloak-db.sql
sdk/: README.md
sdk/java/: README.md  pom.xml
sdk/javascript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/javascript/src/: index.ts
sdk/php/: README.md  composer.json
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: quickstart.py
sdk/python/loyalty_sdk/: __init__.py  client.py  errors.py
(+726 files in other folders)
